--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -1,9 +1,20 @@
+# Jake's .tmux.conf
+
 set -g default-terminal "xterm-256color"
-bind | split-window -h
-bind - split-window -v
+set-option -g default-command "reattach-to-user-namespace -l bash"
+
+#bind | split-window -h
+bind | split-window -h -c "#{pane_current_path}"
+#bind - split-window -v
+bind - split-window -v -c "#{pane_current_path}"
+
 bind r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
+bind-key -t vi-copy Enter copy-pipe "pbcopy"
+
 set-window-option -g mode-keys vi
-set-window-option -g mode-mouse on
-set -g mouse-select-window on
-set -g mouse-select-pane on
-set -g mouse-resize-pane on
+
+#set-window-option -g mode-mouse on
+set -g mouse on
+#set -g mouse-select-window on
+#set -g mouse-select-pane on
+#set -g mouse-resize-pane on
